@@ -1,21 +1,47 @@
 plugins {
-    id 'java-library'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 group 'dhbw'
-version null
+version '1.0'
 
 repositories {
     mavenCentral()
 }
 
-task build_jar(type: Jar) {
-    project.archivesBaseName = "engine"
+javafx {
+    version = "15.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
 
-    manifest {
-        attributes["Main-Class"] = "Enigne"
+dependencies {
+    implementation("com.google.guava:guava:30.1-jre")
+    implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.5.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
     }
+}
 
-    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+mainClassName='base.PrimaryFlightDisplayGUI'
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
